[package]
name = "pinetime-quickstart"
version = "0.1.0"
authors = ["Ales Katona <almindor@gmail.com>"]
edition = "2018"

categories = ["embedded", "hardware-support", "no-std"]
keywords = ["arm", "cortex-m", "nrf52", "hal", "nrf52832"]
license = "Apache-2.0"

[dependencies]
cortex-m = "0.6.3"
cortex-m-rt = "0.6.12"
display-interface = "0.4"
display-interface-spi = "0.4"
embedded-graphics = "0.6.2"
embedded-hal = "0.2.4"
cortex-m-semihosting = "0.3.5"
panic-halt = "0.2.0"
st7789 = "0.5.0"

[dependencies.nrf52832-hal]
version = "0.11.0"
default-features = false
features = ["xxAA-package", "rt"]

[[bin]]
name = "pinetime-quickstart"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimization